SP500 analysis revised

--- a/SP500_analysis.ipynb
+++ b/SP500_analysis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7c3732f47b31d3ae3976d6e45fc59626ff09ee4131aaa7b2f2f6b5c9e3d8a3db"
+  "signature": "sha256:08096d0ed20a5d53c9a42608153b8ad55f8b391826f238ac84ee310be36f8fe8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -52,8 +52,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 649
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -281,7 +280,7 @@
       "final_pq=[0,0]\n",
       "for p in range(0,4):\n",
       "    for q in range(0,2):\n",
-      "        arma_mod = smapi.tsa.ARMA(my_data, (p,q)).fit()\n",
+      "        arma_mod = smapi.tsa.ARMA(diff(my_data), (p,q)).fit()\n",
       "        current_bic = arma_mod.bic\n",
       "        print(p, q, current_bic)\n",
       "        print(smapi.stats.durbin_watson(arma_mod.resid))"
@@ -353,7 +352,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "arma_mod = smapi.tsa.ARMA(my_data, (3,1)).fit()\n",
+      "arma_mod = smapi.tsa.ARMA(diff(my_data), (3,1)).fit()\n",
       "print(arma_mod.params)"
      ],
      "language": "python",
